# email-service

./: .gitignore  LICENSE  README.md  email-service.code-workspace  pyproject.toml
src/email_service_nicegui/: __about__.py  __init__.py  email_service.py  utils.py
tests/: __init__.py  test_email_nicegui.py  test_email_redis_common.py
